--- a/styles.css
+++ b/styles.css
@@ -96,10 +96,11 @@ button {
 .text {
     display: flex;
     flex-direction: column;
-    width:60%;
+    width:50%;
     justify-content: center;
     align-items: flex-start;
     row-gap: 10px;
+    flex: 0 0 auto;
 
 
 }
@@ -113,7 +114,7 @@ button {
 .main img{
     max-width: 100%;
     height: auto;
-    flex: 1;
+    flex: 1 1 auto;
  
 
 
@@ -129,6 +130,8 @@ button {
     padding-right: 75px;
     padding-top: 45px;
     padding-bottom: 100px;
+
+
 }
 
 .title {
@@ -142,12 +145,10 @@ button {
 .cardspace {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: center;
     column-gap: 15px;
     flex-wrap: wrap;
     row-gap: 20px;
-    padding-left: auto;
-    padding-right: auto;
 
 }
 
