--- a/styles.css
+++ b/styles.css
@@ -162,8 +162,8 @@ button {
 }
 
 .cards img {
-    width: 300px;
-    height: 300px;
+    width: 250px;
+    height: 250px;
     border-radius: 10px;
 }
 
@@ -172,3 +172,25 @@ button {
     text-align: center;
 }
 
+
+
+.testemonial {
+    color: #1F2937 ;
+    background-color: #E5E7EB;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    padding-left: 250px;
+    padding-right: 250px;
+}
+
+.testemonial .quote {
+    font-size: 36px;
+    font-style:italic;
+    font-weight:lighter;
+}
+
+.testemonial .author {
+    text-align: right;
+    font-weight: bold;
+    font-size: 18px;
+}
