Style and add content to call to action section

--- a/styles.css
+++ b/styles.css
@@ -179,8 +179,8 @@ button {
     background-color: #E5E7EB;
     padding-top: 100px;
     padding-bottom: 100px;
-    padding-left: 250px;
-    padding-right: 250px;
+    padding-left: 280px;
+    padding-right: 280px;
 }
 
 .testemonial .quote {
@@ -193,4 +193,42 @@ button {
     text-align: right;
     font-weight: bold;
     font-size: 18px;
+}
+
+
+.action {
+    display: flex;
+    flex-direction: row;
+    column-gap: 15px;
+    justify-content: center;
+    align-items: center;
+    margin: 100px 200px 100px 200px;
+    padding: 50px 50px 50px 50px;
+    background-color: #3882F6;
+    border-radius: 10px;
+}
+
+.words {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    row-gap: 5px;
+    width: 70%;
+}
+
+.words h1 {
+    color: #F9FAF8;
+    font-size: 18px;
+}
+
+.words p {
+    color: #E5E7EB;
+}
+
+.action-button {
+    border: 2px solid;
+    border-color: #F9FAF8;
+    border-radius: 2px;
+    text-align: center;
 }
