Style the footer, adjusted info card spacing

--- a/styles.css
+++ b/styles.css
@@ -146,7 +146,7 @@ button {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    column-gap: 15px;
+    column-gap: 30px;
     flex-wrap: wrap;
     row-gap: 20px;
 
@@ -231,4 +231,13 @@ button {
     border-color: #F9FAF8;
     border-radius: 2px;
     text-align: center;
+}
+
+.footer {
+    background-color: #1F2937;
+    color: #F9FAF8;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    text-align: center;
+
 }
